# C-PLUS-PLUS-FOR-MILITARY-TECHNOLOGY

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: .clang-tidy  Dockerfile  apt-packages.in  devcontainer.json
.devcontainer/scripts/: initialize
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  devcontainer-image.yml
cmake/: FetchGoogleTest.cmake
demos/lesson_2_4/debug_probe/: README.md
docs/: code-quality.md
homework_04/src/: main.cpp
homework_05/: CMakeLists.txt
homework_05/src/: main.cpp  telemetry.cpp
homework_06/: CMakeLists.txt
homework_06/data/: README.md
homework_06/include/: ballistics.hpp
homework_06/src/: ballistics.cpp  main.cpp
homework_06/tests/: ballistics_tests.cpp
homework_07/: CMakeLists.txt
homework_07/data/Lissajous-trajectory/: config.json
homework_07/data/cardioid-epitrochoid/: config.json
homework_07/data/elliptical-trajectories/: config.json
homework_07/data/extreme/: config.json
homework_07/data/fast-drone_slow-targets/: config.json
homework_07/data/figure-eight-trajectory/: config.json
homework_07/data/gliding-ammo/: config.json
homework_07/data/heavy-ammo/: config.json
homework_07/data/star-trajectories/: config.json
homework_07/include/: analytical_solver.hpp  ballistic_table.hpp  ballistics.hpp  domain_types.hpp  drone_kinematics.hpp  drone_physics.hpp  factories.hpp  file_config_loader.hpp  json_target_provider.hpp  mission_demo.hpp  mission_processor.hpp  mission_simulator.hpp  simulation_clock.hpp  simulation_json_writer.hpp  simulation_pacing.hpp  table_solver.hpp  thread_safe_queue.hpp  thread_safe_target_provider.hpp
homework_07/include/interfaces/: i_ballistic_solver.hpp  i_config_loader.hpp  i_target_provider.hpp
homework_07/reference/: README.md  legacy_baseline.cpp
homework_07/src/: analytical_solver.cpp  ballistic_table.cpp  ballistics.cpp  drone_kinematics.cpp  drone_physics.cpp  factories.cpp  file_config_loader.cpp  json_target_provider.cpp  legacy_baseline.cpp  main.cpp  mission_demo.cpp  mission_processor.cpp  mission_simulator.cpp  simulation_json_writer.cpp  table_solver.cpp  thread_safe_target_provider.cpp
homework_07/tests/: analytical_solver_tests.cpp  baseline_tests.cpp  file_config_loader_tests.cpp  json_target_provider_tests.cpp  mission_demo_tests.cpp  mission_processor_tests.cpp
scripts/: check-quality
